layout: adjust constraints and margins

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,14 @@
 
     <TextView
         android:id="@+id/cmdview"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginVertical="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_margin="20dp"
         android:gravity="bottom"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/constrained"
+        app:layout_constraintLeft_toRightOf="@id/cmdview3"
         app:layout_constraintRight_toRightOf="@+id/activity_main"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,11 +25,8 @@
         android:id="@+id/cmdview2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="5dp"
+        android:layout_margin="20dp"
         android:gravity="bottom"
-        android:maxLines="8"
         app:layout_constraintBottom_toTopOf="@id/cmdview3"
         app:layout_constraintLeft_toLeftOf="@id/constrained"
         app:layout_constraintRight_toLeftOf="@+id/cmdview"
@@ -39,11 +36,9 @@
         android:id="@+id/cmdview3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
         android:gravity="bottom"
-        android:maxLines="8"
         app:layout_constraintBottom_toTopOf="@id/constrained"
         app:layout_constraintLeft_toLeftOf="@id/constrained"
         app:layout_constraintRight_toLeftOf="@+id/cmdview"
