--- a/app/src/main/res/layout/d_pad_2.xml
+++ b/app/src/main/res/layout/d_pad_2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.xtr.keymapper.Layout.MovableFrameLayout
+<com.xtr.keymapper.layout.MovableFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -89,4 +89,4 @@
         android:layout_height="match_parent"
         android:translationZ="1dp"
         app:srcCompat="@drawable/key" />
-</com.xtr.keymapper.Layout.MovableFrameLayout>
+</com.xtr.keymapper.layout.MovableFrameLayout>
