--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,28 +15,42 @@
         android:orientation="vertical"
         android:translationZ="1dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:animateLayoutChanges="true">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/profileTextView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:visibility="gone" />
+            android:layout_height="match_parent"
+            android:animateLayoutChanges="true"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/current_profile" />
+
+            <TextView
+                android:id="@+id/profileTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:visibility="gone"
+                tools:visibility="visible" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/profiles_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:animateLayoutChanges="true">
+            android:animateLayoutChanges="true"
+            android:orientation="horizontal">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/app_grid"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
-                android:visibility="gone" />
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <ImageButton
                 android:id="@+id/profiles"
@@ -47,7 +61,6 @@
                 android:foreground="@drawable/ic_profiles_1"
                 android:foregroundTint="@color/white"
                 android:translationZ="0dp" />
-
         </LinearLayout>
     </LinearLayout>
 
