Migrate Profiles View to fragment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,47 +9,16 @@
     tools:ignore="ContentDescription,SpUsage">
 
 
-    <LinearLayout
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/profilesView"
+        android:name="com.xtr.keymapper.fragment.Profiles"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:translationZ="1dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:animateLayoutChanges="true">
-
-        <TextView
-            android:id="@+id/profileTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:visibility="gone" />
-
-        <LinearLayout
-            android:id="@+id/profiles_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:animateLayoutChanges="true">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/app_grid"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:visibility="gone" />
-
-            <ImageButton
-                android:id="@+id/profiles"
-                android:layout_width="20dp"
-                android:layout_height="160dp"
-                android:layout_gravity="center"
-                android:background="#00FFFFFF"
-                android:foreground="@drawable/ic_profiles_1"
-                android:foregroundTint="@color/white"
-                android:translationZ="0dp" />
-
-        </LinearLayout>
-    </LinearLayout>
+        tools:layout="@layout/fragment_profiles" />
 
     <TextView
         android:id="@+id/cmdview"
