--- a/app/src/main/res/layout/fragment_settings_dialog.xml
+++ b/app/src/main/res/layout/fragment_settings_dialog.xml
@@ -1,15 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.slider.Slider xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/slider"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:stepSize="1"
-    tools:value="2"
-    android:valueFrom="1"
-    android:valueTo="5"
-    app:haloColor="@color/purple_700"
-    app:thumbColor="@color/purple_500"
-    app:trackColorActive="@color/teal_200"
-    app:trackHeight="10dp" />
+    android:orientation="vertical"
+    android:padding="20dp">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/mouse_sensitivity"/>
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/slider_mouse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:stepSize="1"
+        android:valueFrom="1"
+        android:valueTo="5"
+        app:haloColor="@color/purple_700"
+        app:thumbColor="@color/purple_500"
+        app:trackColorActive="@color/teal_200"
+        app:trackHeight="10dp"
+        tools:value="2" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/dpad_radius"/>
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/slider_dpad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:stepSize="0.1"
+        android:valueFrom="0.5"
+        android:valueTo="2.0"
+        app:haloColor="@color/purple_700"
+        app:thumbColor="@color/purple_500"
+        app:trackColorActive="@color/teal_200"
+        app:trackHeight="10dp"
+        tools:value="1.0" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/mouse_input_device"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/input_device"/>
+</LinearLayout>
