--- a/app/src/main/res/layout/dpad1.xml
+++ b/app/src/main/res/layout/dpad1.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="HardcodedText,ContentDescription"
     android:layout_width="200dp"
-    android:layout_height="200dp"
-    android:id="@+id/dpad1">
+    android:layout_height="200dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
