--- a/app/src/main/res/layout/crosshair.xml
+++ b/app/src/main/res/layout/crosshair.xml
@@ -15,6 +15,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
             android:id="@+id/background"
             app:srcCompat="@drawable/key"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -22,6 +24,8 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:scaleX="0.9"
+            android:scaleY="0.9"
             app:layout_constraintCircle="@id/background"
             app:srcCompat="@drawable/crosshair"
             app:tint="@color/white"/>
