--- a/app/src/main/res/layout/keymap_editor.xml
+++ b/app/src/main/res/layout/keymap_editor.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <com.nambimobile.widgets.efab.ExpandableFabLayout
-        android:id="@+id/MainView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_gravity="center"
-        android:layout_height="match_parent"
-        android:theme="@style/Theme.MaterialComponents">
+<com.nambimobile.widgets.efab.ExpandableFabLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/MainView"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_width="match_parent"
+    android:layout_gravity="center"
+    android:layout_height="match_parent"
+    android:theme="@style/Theme.MaterialComponents"
+    tools:context=".activity.EditorUI">
+
     <com.nambimobile.widgets.efab.Overlay
         android:layout_width="match_parent"
         android:layout_height="match_parent"
