--- a/app/src/main/res/layout/cursor.xml
+++ b/app/src/main/res/layout/cursor.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/MainView">
-
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/pointer_arrow" />
-</LinearLayout>
+        android:src="@drawable/pointer_arrow"
+        android:id="@+id/cursor"/>
+</FrameLayout>
