--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -24,23 +24,19 @@
         android:id="@+id/cmdview"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginVertical="20dp"
+        android:fontFamily="monospace"
         android:gravity="bottom"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         android:textSize="16sp"
-        android:fontFamily="monospace"
-        app:layout_constraintBottom_toTopOf="@id/constrained"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/cmdview3"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/constrained"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/cmdview2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
         android:gravity="bottom"
         android:fontFamily="monospace"
         app:layout_constraintBottom_toTopOf="@id/cmdview3"
@@ -52,21 +48,20 @@
         android:id="@+id/cmdview3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="20dp"
-        android:gravity="bottom"
         android:fontFamily="monospace"
-        app:layout_constraintBottom_toTopOf="@id/constrained"
+        android:gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/cmdview"
         app:layout_constraintTop_toBottomOf="@id/cmdview2" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constrained"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
 
         <LinearLayout
@@ -119,10 +114,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:layout_marginVertical="10dp"
+                android:drawablePadding="110dp"
                 android:text="@string/edit_keymap"
                 app:icon="@drawable/ic_create_white_24dp"
-                app:iconSize="24dp"
-                android:drawablePadding="110dp"/>
+                app:iconSize="24dp" />
 
             <Button
                 android:id="@+id/start_in_terminal"
